--- a/src/components/collapsible_nav/collapsible_nav_group/_collapsible_nav_group.scss
+++ b/src/components/collapsible_nav/collapsible_nav_group/_collapsible_nav_group.scss
@@ -1,9 +1,3 @@
-$euiCollapsibleNavGroupLightBackgroundColor: $euiPageBackgroundColor;
-$euiCollapsibleNavGroupDarkBackgroundColor: lightOrDarkTheme(
-  shade($euiColorDarkestShade, 20%),
-  shade($euiColorLightestShade, 50%),
-);
-
 .euiCollapsibleNavGroup {
   &:not(:first-child) {
     border-top: $euiBorderThin;
@@ -17,6 +11,12 @@ $euiCollapsibleNavGroupDarkBackgroundColor: lightOrDarkTheme(
 .euiCollapsibleNavGroup--dark {
   background-color: $euiCollapsibleNavGroupDarkBackgroundColor;
   color: $euiColorGhost;
+
+  // Forcing better contrast of focus state on EuiAccordion toggle icon
+  .euiAccordion__button:focus .euiAccordion__iconWrapper {
+    color: $euiCollapsibleNavGroupDarkHighContrastColor;
+    animation-name: euiCollapsibleNavGroupDarkFocusRingAnimate !important; // sass-lint:disable-line no-important
+  }
 }
 
 .euiCollapsibleNavGroup__title {
@@ -36,4 +36,14 @@ $euiCollapsibleNavGroupDarkBackgroundColor: lightOrDarkTheme(
 
 .euiCollapsibleNavGroup--withTitle .euiCollapsibleNavGroup__children {
   padding-top: 0;
+}
+
+@keyframes euiCollapsibleNavGroupDarkFocusRingAnimate {
+  0% {
+    box-shadow: 0 0 0 $euiFocusRingAnimStartSize $euiFocusRingAnimStartColor;
+  }
+
+  100% {
+    box-shadow: 0 0 0 $euiFocusRingSize $euiCollapsibleNavGroupDarkHighContrastColor;
+  }
 }
